0.13.x/_sources/api/skimage.restoration.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`restoration`
==========================
.. automodule:: skimage.restoration

.. currentmodule:: skimage.restoration
.. autosummary::

   skimage.restoration.denoise_bilateral
   skimage.restoration.denoise_nl_means
   skimage.restoration.denoise_tv_bregman
   skimage.restoration.denoise_tv_chambolle
   skimage.restoration.denoise_wavelet
   skimage.restoration.estimate_sigma
   skimage.restoration.inpaint_biharmonic
   skimage.restoration.nl_means_denoising
   skimage.restoration.richardson_lucy
   skimage.restoration.unsupervised_wiener
   skimage.restoration.unwrap_phase
   skimage.restoration.wiener


    skimage.restoration.deconvolution
    skimage.restoration.inpaint
    skimage.restoration.non_local_means
    skimage.restoration.uft
    skimage.restoration.unwrap

denoise_bilateral
-----------------

.. autofunction:: skimage.restoration.denoise_bilateral

denoise_nl_means
----------------

.. autofunction:: skimage.restoration.denoise_nl_means

denoise_tv_bregman
------------------

.. autofunction:: skimage.restoration.denoise_tv_bregman

denoise_tv_chambolle
--------------------

.. autofunction:: skimage.restoration.denoise_tv_chambolle

denoise_wavelet
---------------

.. autofunction:: skimage.restoration.denoise_wavelet

estimate_sigma
--------------

.. autofunction:: skimage.restoration.estimate_sigma

inpaint_biharmonic
------------------

.. autofunction:: skimage.restoration.inpaint_biharmonic

nl_means_denoising
------------------

.. autofunction:: skimage.restoration.nl_means_denoising

richardson_lucy
---------------

.. autofunction:: skimage.restoration.richardson_lucy

unsupervised_wiener
-------------------

.. autofunction:: skimage.restoration.unsupervised_wiener

unwrap_phase
------------

.. autofunction:: skimage.restoration.unwrap_phase

wiener
------

.. autofunction:: skimage.restoration.wiener

